unpackaged/main/default/objects/Application_Log_Event__e/Application_Log_Event__e.object-meta.xml
<CustomObject>
    <label>Application Log Event</label>
    <pluralLabel>Application Log Events</pluralLabel>
</CustomObject>