unpackaged/main/default/objects/Application_Log_Event__e/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>