unpackaged/main/default/objects/Application_Log_Event__e/fields/Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Id__c</fullName>
    <label>Call Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>