unpackaged/main/default/objects/Application_Log_Event__e/fields/Error_Caught__c.field-meta.xml
<CustomField>
    <fullName>Error_Caught__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Caught</label>
    <type>Checkbox</type>
</CustomField>