unpackaged/main/default/objects/Application_Log_Event__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <length>225</length>
    <type>Text</type>
</CustomField>