unpackaged/main/default/objects/Application_Log_Event__e/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>RecordTypeId</label>
    <length>225</length>
    <type>Text</type>
</CustomField>