unpackaged/main/default/objects/Application_Log_Event__e/fields/Total_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Record_Count__c</fullName>
    <label>Total Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>